feat: added introduction section

--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,38 @@
     </header>
 
     <div class="c-vertical-line"></div>
-
+    <section class="c-introduction">
+      <div class="c-introduction__message">
+        <div class="c-introduction__message__container">
+          <p>Prazer, Gustavo Rédua</p>
+          <h1>
+            Evolução <span> Profissional:&nbsp</span><br />Da Iniciação à
+            Excelência
+          </h1>
+          <p>
+            Bem-vindo ao meu portfólio! Aqui, compartilho meu progresso em
+            design, arte 3D e programação, sempre em busca de excelência técnica
+            e criativa.
+          </p>
+          <a>
+            Visualizar Currículo
+            <i
+              class="fa fa-external-link"
+              aria-hidden="true"
+            ></i>
+          </a>
+        </div>
+      </div>
+      <div class="c-introduction__image">
+        <div class="c-introduction__image__container">
+          <img
+            src="../res/img/eu.webp"
+            alt=""
+          />
+          <span></span>
+        </div>
+      </div>
+    </section>
     <section
       class="c-about-me"
       id="about"
