feat: add skill section

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
       crossorigin
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Iceland&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:wght@100..900&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -129,7 +129,7 @@
       </nav>
     </header>
 
-    <div class="c-vertical-line"></div>
+    <div class="c-horizontal-line"></div>
     <section class="c-introduction">
       <div class="c-introduction__message">
         <div class="c-introduction__message__container">
@@ -162,50 +162,136 @@
         </div>
       </div>
     </section>
-    <section
-      class="c-about-me"
-      id="about"
-    >
-      <h2>About Me</h2>
-      <p>
-        Sou formado com técnico em informática pelo Instituto Federal de Mato
-        Grosso do Sul. Atualmente sou acadêmico do curso de Engenharia de
-        Computação da Universidade Federal de Mato Grosso do Sul e Engenharia de
-        Software pela UNIGRAN. Eu Adoro design, artes, jogos e música. Estou
-        sempre à procura de desafios que me levem a melhorar as minhas
-        competências académicas e profissionais.
-      </p>
-    </section>
+    <div class="c-geral-background">
+      <!-- fonts 
+      <section
+        class="c-about-me"
+        id="about"
+      >
+        <h2>About Me</h2>
+        <p>
+          Sou formado com técnico em informática pelo Instituto Federal de Mato
+          Grosso do Sul. Atualmente sou acadêmico do curso de Engenharia de
+          Computação da Universidade Federal de Mato Grosso do Sul e Engenharia
+          de Software pela UNIGRAN. Eu Adoro design, artes, jogos e música.
+          Estou sempre à procura de desafios que me levem a melhorar as minhas
+          competências académicas e profissionais.
+        </p>
+      </section>
+      -->
 
-    <section class="c-skills">
-      <h2>Skills</h2>
-      <p>JavaScript, HTML, C++, Java, and C#.</p>
-    </section>
+      <section class="c-skills">
+        <div class="c-skills__title">
+          <h2>Skills</h2>
+        </div>
+        <div class="c-skills__table">
+          <div class="c-skills__top-table">
+            <div>
+              <img
+                src="../res/icon/skills/blender.svg"
+                alt=""
+              />
+              <p>Blender 3D - Generalista</p>
+            </div>
+            <div class="c-skills__table__vertical-line"></div>
+            <div>
+              <img
+                src="../res/icon/skills/inkscape.svg"
+                alt=""
+              />
+              <p>Inkscape - Generalista</p>
+            </div>
+            <div class="c-skills__table__vertical-line"></div>
+            <div>
+              <img
+                src="../res/icon/skills/figma.svg"
+                alt=""
+              />
+              <p>Figma - UI | UX Designer</p>
+            </div>
+          </div>
+          <div class="c-skills__middle-table">
+            <div>
+              <img
+                src="../res/icon/skills/javascript.svg"
+                alt=""
+              />
+              <p>JavaScript - Front-End</p>
+            </div>
+            <div class="c-skills__table__vertical-line"></div>
+            <div>
+              <img
+                src="../res/icon/skills/html.svg"
+                alt=""
+              />
+              <p>HTML - Desenvolvedor Web</p>
+            </div>
+            <div class="c-skills__table__vertical-line"></div>
+            <div>
+              <img
+                src="../res/icon/skills/css.svg"
+                alt=""
+              />
+              <p>CSS - Desenvolvedor Web</p>
+            </div>
+          </div>
+          <div class="c-skills__bot-table">
+            <div>
+              <img
+                src="../res/icon/skills/java.svg"
+                alt=""
+              />
+              <p>Java - Desenvolvedor</p>
+            </div>
+            <div class="c-skills__table__vertical-line"></div>
+            <div>
+              <img
+                src="../res/icon/skills/cpp.svg"
+                alt=""
+              />
+              <p>C++ - Desenvolvedor</p>
+            </div>
+            <div class="c-skills__table__vertical-line"></div>
+            <div>
+              <img
+                src="../res/icon/skills/mysql.svg"
+                alt=""
+              />
+              <p>MySQL - especialista SQL</p>
+            </div>
+          </div>
+        </div>
+        <a
+          class="c-see-more-button"
+          href="/"
+          >Veja Mais</a
+        >
+      </section>
 
-    <section
-      class="c-projects"
-      id="projects"
-    >
-      <h2>Projetos</h2>
-    </section>
+      <section
+        class="c-projects"
+        id="projects"
+      >
+        <h2>Projetos</h2>
+      </section>
 
-    <section
-      class="c-contact"
-      id="contact"
-    >
-      <h2>Fale Comigo</h2>
-      <p>
-        Agradeço por explorar meu portfólio. Como artista 3D, programador e
-        designer, compartilhamos a fascinação pelo universo criativo. Estou à
-        disposição para trocar ideias, responder a questionamentos e juntos
-        desbravarmos oportunidades empolgantes.
-      </p>
-    </section>
+      <section
+        class="c-contact"
+        id="contact"
+      >
+        <h2>Fale Comigo</h2>
+        <p>
+          Agradeço por explorar meu portfólio. Como artista 3D, programador e
+          designer, compartilhamos a fascinação pelo universo criativo. Estou à
+          disposição para trocar ideias, responder a questionamentos e juntos
+          desbravarmos oportunidades empolgantes.
+        </p>
+      </section>
 
-    <footer>
-      <p>&copy; 2024 Gustavo Rédua. All rights reserved.</p>
-    </footer>
-
+      <footer>
+        <p>&copy; 2024 Gustavo Rédua. All rights reserved.</p>
+      </footer>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
