style: add h-line on header, adjust skill grid gap, and add new bacground

--- a/src/index.html
+++ b/src/index.html
@@ -264,7 +264,7 @@
         <a
           class="c-see-more-button"
           href="/"
-          >Veja Mais</a
+          >Ver Mais</a
         >
       </section>
 
