feat: add project section

--- a/src/index.html
+++ b/src/index.html
@@ -272,9 +272,55 @@
         class="c-projects"
         id="projects"
       >
-        <h2>Projetos</h2>
+        <div class="c-projects__title">
+          <h2>Projetos</h2>
+        </div>
+        <div class="c-projects__category">
+          <div class="c-projects__card">
+            <img
+              src="../res/img/projects/cards/hand.png"
+              alt="c-projects__button"
+            /><a
+              class="c-projects__button"
+              href="/"
+              >Arte</a
+            >
+          </div>
+          <div class="c-projects__card">
+            <img
+              src="../res/img/projects/cards/design.png"
+              alt=""
+            /><a
+              class="c-projects__button"
+              href="/"
+              >Design</a
+            >
+          </div>
+          <div class="c-projects__card">
+            <img
+              src="../res/img/projects/cards/dev.png"
+              alt=""
+            /><a
+              class="c-projects__button"
+              href="/"
+              >Desenvolvemento</a
+            >
+          </div>
+        </div>
       </section>
-
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="1248"
+        height="304"
+        viewBox="0 0 1248 304"
+        fill="none"
+      >
+        <path
+          d="M-6.07 303.5L398.77 167.5L662.97 265.908L769.07 1L1249.06 231.291"
+          stroke="white"
+          stroke-linecap="round"
+        />
+      </svg>
       <section
         class="c-contact"
         id="contact"
