feat: add initial contact form

--- a/src/index.html
+++ b/src/index.html
@@ -325,13 +325,108 @@
         class="c-contact"
         id="contact"
       >
-        <h2>Fale Comigo</h2>
-        <p>
-          Agradeço por explorar meu portfólio. Como artista 3D, programador e
-          designer, compartilhamos a fascinação pelo universo criativo. Estou à
-          disposição para trocar ideias, responder a questionamentos e juntos
-          desbravarmos oportunidades empolgantes.
-        </p>
+        <div class="c-contact__title">
+          <h2>Fale Comigo</h2>
+        </div>
+
+        <div class="c-contact__container">
+          <div class="c-contact__content">
+            <div class="c-contact__copy">
+              <h3>Contato</h3>
+              <p>
+                Agradeço por explorar meu portfólio. Como artista 3D,
+                programador e designer, compartilhamos a fascinação pelo
+                universo criativo. Estou à disposição para trocar ideias,
+                responder a questionamentos e juntos desbravarmos oportunidades
+                empolgantes.
+              </p>
+              <h4>Meios de Comunicação</h4>
+              <div class="c-contact__social">
+                <ul class="c-contact__social__list">
+                  <li class="c-contact__social__item">
+                    <a
+                      href="https://wa.me/5567992875017"
+                      target="_blank"
+                    >
+                      <img
+                        src="../res/icon/whatsapp.svg"
+                        alt="Whatsapp"
+                        class="social-contact__icon"
+                      />
+                    </a>
+                  </li>
+                  <li class="c-contact__social__item">
+                    <a
+                      href="https://www.linkedin.com/in/gustavo-redua"
+                      target="_blank"
+                    >
+                      <img
+                        src="../res/icon/linkedin.svg"
+                        alt="LinkedIn"
+                        class="social-contact__icon"
+                      />
+                    </a>
+                  </li>
+                  <li class="c-contact__social__item">
+                    <a
+                      href="mailto:gustavoreduaoliveira@gmail.com"
+                      target="_blank"
+                    >
+                      <img
+                        src="../res/icon/email.svg"
+                        alt="Email"
+                        class="social-contact__icon"
+                      />
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="c-contact__form">
+              <h3>Formulário Para Contato</h3>
+              <div class="c-contact__form-content">
+                <input
+                  placeholder="Nome"
+                  type="text"
+                  name="formName"
+                  id="formName"
+                />
+              </div>
+              <div class="c-contact__form-content">
+                <input
+                  placeholder="Email"
+                  type="email"
+                  name="formEmail"
+                  id="formEmail"
+                />
+              </div>
+              <div class="c-contact__form-content">
+                <input
+                  placeholder="Assunto"
+                  type="Assunto"
+                  name="formSubject"
+                  id="formSubject"
+                />
+              </div>
+              <div class="c-contact__form-content">
+                <textarea
+                  placeholder="Mensagem"
+                  type="text"
+                  name="formMessage"
+                  id="formMessage"
+                ></textarea>
+              </div>
+              <p class="c-hidden">mensagem de validação</p>
+              <button type="submit">
+                Enviar
+                <img
+                  src="../res/icon/email.svg"
+                  alt=""
+                />
+              </button>
+            </div>
+          </div>
+        </div>
       </section>
 
       <footer>
