feat: add new about section

--- a/src/index.html
+++ b/src/index.html
@@ -163,22 +163,17 @@
       </div>
     </section>
     <div class="c-geral-background">
-      <!-- fonts 
+
       <section
-        class="c-about-me"
-        id="about"
+        class="c-about"
       >
-        <h2>About Me</h2>
-        <p>
-          Sou formado com técnico em informática pelo Instituto Federal de Mato
-          Grosso do Sul. Atualmente sou acadêmico do curso de Engenharia de
-          Computação da Universidade Federal de Mato Grosso do Sul e Engenharia
-          de Software pela UNIGRAN. Eu Adoro design, artes, jogos e música.
-          Estou sempre à procura de desafios que me levem a melhorar as minhas
-          competências académicas e profissionais.
-        </p>
+        <div class="c-about__title">
+          <h2>Sobre</h2>
+        </div>
+        <div><img src="../res/img/resume.png"></div>
+        <a class="c-about__buttom" href="../res/PDF/Resume.pdf">Download PDF</a>
+
       </section>
-      -->
 
       <section class="c-skills">
         <div class="c-skills__title">
