fix: fixed social icons visibility

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
                 target="_blank"
               >
                 <img
-                  src="../res/icon/github.svg"
+                  src="../res/icon/social-icons/github.svg"
                   alt="GitHub Icon"
                   class="social-contact__icon"
                 />
@@ -82,7 +82,7 @@
                 target="_blank"
               >
                 <img
-                  src="../res/icon/behance.svg"
+                  src="../res/icon/social-icons/behance.svg"
                   alt="Behance Icon"
                   class="social-contact__icon"
                 />
@@ -94,7 +94,7 @@
                 target="_blank"
               >
                 <img
-                  src="../res/icon/instagram.svg"
+                  src="../res/icon/social-icons/instagram.svg"
                   alt="Instagram Icon"
                   class="social-contact__icon"
                 />
@@ -106,7 +106,7 @@
                 target="_blank"
               >
                 <img
-                  src="../res/icon/linkedin.svg"
+                  src="../res/icon/social-icons/linkedin.svg"
                   alt="LinkedIn Icon"
                   class="social-contact__icon"
                 />
@@ -118,7 +118,7 @@
                 target="_blank"
               >
                 <img
-                  src="../res/icon/email.svg"
+                  src="../res/icon/social-icons/email.svg"
                   alt="Email Icon"
                   class="social-contact__icon"
                 />
@@ -344,7 +344,7 @@
                       target="_blank"
                     >
                       <img
-                        src="../res/icon/whatsapp.svg"
+                        src="../res/icon/social-icons/whatsapp.svg"
                         alt="Whatsapp"
                         class="social-contact__icon"
                       />
@@ -356,7 +356,7 @@
                       target="_blank"
                     >
                       <img
-                        src="../res/icon/linkedin.svg"
+                        src="../res/icon/social-icons/linkedin.svg"
                         alt="LinkedIn"
                         class="social-contact__icon"
                       />
@@ -368,7 +368,7 @@
                       target="_blank"
                     >
                       <img
-                        src="../res/icon/email.svg"
+                        src="../res/icon/social-icons/email.svg"
                         alt="Email"
                         class="social-contact__icon"
                       />
@@ -415,7 +415,7 @@
               <button type="submit">
                 Enviar
                 <img
-                  src="../res/icon/email.svg"
+                  src="../res/icon/social-icons/email.svg"
                   alt=""
                 />
               </button>
