fix: removed about section

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -36,12 +36,6 @@
       <nav class="c-navegation">
         <div class="c-navegation__menu">
           <ul class="c-navegation__list">
-            <li
-              class="c-navegation__item"
-              id="item1"
-            >
-              <a href="#about">Sobre</a>
-            </li>
             <li
               class="c-navegation__item"
               id="item2"
@@ -163,17 +157,6 @@
       </div>
     </section>
     <div class="c-geral-background">
-
-      <section
-        class="c-about"
-      >
-        <div class="c-about__title">
-          <h2>Sobre</h2>
-        </div>
-        <div><img src="../res/img/resume.png"></div>
-        <a class="c-about__buttom" href="../res/PDF/Resume.pdf">Download PDF</a>
-
-      </section>
 
       <section class="c-skills">
         <div class="c-skills__title">
@@ -424,8 +407,73 @@
         </div>
       </section>
 
-      <footer>
-        <p>&copy; 2024 Gustavo Rédua. All rights reserved.</p>
+      <footer class="c-footer">
+        <div class="c-footer__grid">
+          <h4>Gustavo Rédua Portifólio</h4>
+          <ul class="c-navegation__social__list">
+            <li class="c-navegation__social__item">
+              <a
+                href="https://github.com/zeutyz"
+                target="_blank"
+              >
+                <img
+                  src="../res/icon/social-icons/github.svg"
+                  alt="GitHub Icon"
+                  class="social-contact__icon"
+                />
+              </a>
+            </li>
+            <li class="c-navegation__social__item">
+              <a
+                href="https://www.behance.net/gustavoredua"
+                target="_blank"
+              >
+                <img
+                  src="../res/icon/social-icons/behance.svg"
+                  alt="Behance Icon"
+                  class="social-contact__icon"
+                />
+              </a>
+            </li>
+            <li class="c-navegation__social__item">
+              <a
+                href="https://www.instagram.com/gustavo_redua"
+                target="_blank"
+              >
+                <img
+                  src="../res/icon/social-icons/instagram.svg"
+                  alt="Instagram Icon"
+                  class="social-contact__icon"
+                />
+              </a>
+            </li>
+            <li class="c-navegation__social__item">
+              <a
+                href="https://www.linkedin.com/in/gustavo-redua"
+                target="_blank"
+              >
+                <img
+                  src="../res/icon/social-icons/linkedin.svg"
+                  alt="LinkedIn Icon"
+                  class="social-contact__icon"
+                />
+              </a>
+            </li>
+            <li class="c-navegation__social__item">
+              <a
+                href="mailto:gustavoreduaoliveira@gmail.com"
+                target="_blank"
+              >
+                <img
+                  src="../res/icon/social-icons/email.svg"
+                  alt="Email Icon"
+                  class="social-contact__icon"
+                />
+              </a>
+            </li>
+          </ul>
+          <p>&copy; 2024 Gustavo Rédua. All rights reserved.</p>
+        </div>
       </footer>
     </div>
     <script src="app.js"></script>
